startForeground()の使い方の間違い修正。AudioFocusの処理追加

--- a/PedometerAlarm/res/xml/settings.xml
+++ b/PedometerAlarm/res/xml/settings.xml
@@ -19,8 +19,8 @@
         android:title="@string/tts" >
         <intent android:action="com.android.settings.TTS_SETTINGS" />
     </Preference>
-    <Preference
-        android:key="ttsTest"
-        android:title="@string/testAlarm" />
+<!--     <Preference -->
+<!--         android:key="ttsTest" -->
+<!--         android:title="@string/testAlarm" /> -->
 
 </PreferenceScreen>
